--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RestaurantApp</string>
     <string name="tv_category">Categories</string>
+    <string name="top_food">Top dishes</string>
 </resources>
